@@ -7,6 +7,7 @@ ags (2.1.6)
 	* fixed ags_osc_buffer_util_get_midi() to access using correct index
 	* fixed ags_osc_buffer_util_get_packet() to read packet size
 	* added ags_osc_buffer_util_test.c
+	* added ags_osc_renew_controller_test.c
 
 ags (2.1.5)
 
